# Side-Projects

./: README.md
IpTvSimulation/: CMakeLists.txt  ChannelModel.cpp  ChannelModel.h  MainWindow.cpp  MainWindow.h  Paths.h  RemoteControl.cpp  RemoteControl.h  Session.vim  SimpleLogger.cpp  SimpleLogger.h  XmlReader.cpp  XmlReader.h  build.sh  channels.xml  main.cpp
